<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/screen"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/screen" />

    <TextView
        android:id="@+id/screen"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zero"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="189dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dot" />

    <Button
        android:id="@+id/dot"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/dot"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equals"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/equals"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/equals"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/two" />

    <Button
        android:id="@+id/one"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/one"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/two"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/two"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one" />

    <Button
        android:id="@+id/three"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/three"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toEndOf="@+id/dot"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintStart_toStartOf="@+id/dot"
        app:layout_constraintTop_toTopOf="@+id/equals" />

    <Button
        android:id="@+id/four"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/four"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@id/five"
        app:layout_constraintBottom_toTopOf="@id/one"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/five" />

    <Button
        android:id="@+id/five"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/five"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/four"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintStart_toEndOf="@+id/four" />

    <Button
        android:id="@+id/six"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/six"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/five"
        app:layout_constraintEnd_toEndOf="@+id/three"
        app:layout_constraintStart_toStartOf="@+id/three"
        app:layout_constraintTop_toTopOf="@+id/five" />

    <Button
        android:id="@+id/add"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/add"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@id/six"
        app:layout_constraintDimensionRatio="1:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toTopOf="@+id/nine" />

    <Button
        android:id="@+id/seven"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/seven"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nine" />

    <Button
        android:id="@+id/eight"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/eight"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/nine"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toTopOf="@+id/nine" />

    <Button
        android:id="@+id/nine"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/nine"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/three"
        app:layout_constraintStart_toStartOf="@+id/six" />

    <Button
        android:id="@+id/delete"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/delete"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toEndOf="@+id/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divide" />

    <Button
        android:id="@+id/divide"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/divide"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toEndOf="@+id/eight"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintTop_toTopOf="@+id/multiply" />

    <Button
        android:id="@+id/multiply"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/multiply"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/nine"
        app:layout_constraintStart_toEndOf="@+id/divide" />

    <Button
        android:id="@+id/subtract"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:text="@string/subtract"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="@+id/add"
        app:layout_constraintStart_toStartOf="@+id/add"
        app:layout_constraintTop_toTopOf="@+id/multiply" />

</android.support.constraint.ConstraintLayout>